compiler/testData/loadJava/compiledJavaCompareWithKotlin/kotlinSignature/error/RedundantProjectionKind.kt
package test

public open class RedundantProjectionKind : Object() {
    public open fun foo(p0: List<Number>) {
        throw UnsupportedOperationException()
    }
}
